@@ -144,11 +144,10 @@ def config_edit(request, api=False, update=False):
             Cluster.api_request("services.haproxy.haproxy.reload_service")
         if "redis_password" in form.changed_data:
             Cluster.api_request("services.haproxy.haproxy.configure_node")
-            for frontend in Frontend.objects.filter(\
-                    (Q(mode="log", listening_mode="redis") | Q(mode="filebeat")) &\
-                    Q(redis_server="127.0.0.5", redis_port=6379)):
-                frontend.redis_password = config.redis_password
-                frontend.save()
+            for frontend in Frontend.objects.filter(Q(mode="log") | Q(mode="filebeat")):
+                if frontend.redis_server == "127.0.0.5" and frontend.redis_port == 6379:
+                    frontend.redis_password = config.redis_password
+                    frontend.save()
                 for node in frontend.get_nodes():
                     node.api_request("services.rsyslogd.rsyslog.build_conf", frontend.pk)
                     if frontend.mode == "filebeat":
